# ComfyUI-test-framework

./: LICENSE  README.md  __init__.py  fzfy.yaml  nodes.py
cli/: Makefile  README.md  comfy_client.py  comfyci.py  pyproject.toml  test_runner.py  workflow_parser.py
cli/client/: __init__.py  auth.py  comfy_client.py  errors.py  generated_models.py  models.py  openapi.yaml
cli/formatters/: __init__.py  base.py  simple.py
tests/: SimpleImageMatch.json
web/: test_framework_extension.js
