[project]
name = "comfyci"
version = "0.1.0"
description = "CLI tool for running ComfyUI test workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jacob Segal", email = "jacob@comfy.org"},
    {name = "Comfy-Org", email = "hello@comfy.org"}
]
dependencies = [
    "click>=8.1.0",
    "websocket-client>=1.6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.25.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/Comfy-Org/ComfyUI-test-framework"
Repository = "https://github.com/Comfy-Org/ComfyUI-test-framework"
Issues = "https://github.com/Comfy-Org/ComfyUI-test-framework/issues"

[project.scripts]
comfyci = "comfyci:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["client/generated_models.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["*.py", "client/**/*.py", "formatters/**/*.py"]
